chore: update jdk version